--- a/war/js/views/profile.html
+++ b/war/js/views/profile.html
@@ -91,15 +91,17 @@
             <div class="controls">
               <input  type="text" 
                       class="span4" 
-                      ng-model="data.resources.name">
+                      ng-model="resources.name"
+                      value="{{data.resources.name}}">
             </div>
-            </div>
+          </div>
           <div class="control-group">
             <label class="control-label">{{ui.profile.email}}</label>
             <div class="controls">
               <input  type="text" 
                       class="span4" 
-                      ng-model="data.resources.EmailAddress">
+                      ng-model="resources.EmailAddress"
+                      value="{{data.resources.EmailAddress}}">
             </div>
           </div>
           <div class="control-group">
@@ -107,7 +109,8 @@
             <div class="controls">
               <input  type="text" 
                       class="span3" 
-                      ng-model="data.resources.PhoneAddress">
+                      ng-model="resources.PhoneAddress"
+                      value="{{data.resources.PhoneAddress}}">
             </div>
           </div>
           <div class="control-group">
@@ -115,7 +118,8 @@
             <div class="controls">
               <input  type="text" 
                       class="span5" 
-                      ng-model="data.resources.PostAddress">
+                      ng-model="resources.PostAddress"
+                      value="{{data.resources.PostAddress}}">
             </div>
           </div>
           <div class="control-group">
@@ -123,7 +127,8 @@
             <div class="controls">
               <input  type="text" 
                       class="span2" 
-                      ng-model="data.resources.PostZip">
+                      ng-model="resources.PostZip"
+                      value="{{data.resources.PostZip}}">
             </div>
           </div>
           <div class="control-group">
@@ -131,13 +136,14 @@
             <div class="controls">
               <input  type="text" 
                       class="span3" 
-                      ng-model="data.resources.PostCity">
+                      ng-model="resources.PostCity"
+                      value="{{data.resources.PostCity}}">
             </div>
           </div>
           <div class="form-actions">
             <button   type="submit" 
                       class="btn btn-success"
-                      ng-click="save(data.resources)">{{ui.profile.saveProfile}}</button>
+                      ng-click="save(resources)">{{ui.profile.saveProfile}}</button>
           </div>
         </form>
         <!-- end edit profile form -->
