--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,11 +1,5 @@
-/*!
- * Bootstrap v2.2.2
- *
- * Copyright 2012 Twitter, Inc
- * Licensed under the Apache License v2.0
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Designed and built with all the love in the world @twitter by @mdo and @fat.
+/**
+ * Bootstrap
  */
 
 // Core variables and mixins
@@ -61,3 +55,76 @@
 
 // Utility classes
 @import "bootstrap/utilities"; // Has to be last to override when necessary
+
+
+
+
+
+/**
+ * Responsive for phone and tablet devices
+ */
+
+// IE10 Metro responsive
+// Required for Windows 8 Metro split-screen snapping with IE10
+// Source: http://timkadlec.com/2012/10/ie10-snap-mode-and-responsive-design/
+
+@-ms-viewport{
+  width: device-width;
+}
+
+
+// REPEAT VARIABLES & MIXINS
+// -------------------------
+// Required since we compile the responsive stuff separately
+
+@import "variables"; // Modify this for custom colors, font-sizes, etc
+@import "mixins";
+
+
+// RESPONSIVE CLASSES
+// ------------------
+
+@import "responsive/responsive-utilities";
+
+
+// MEDIA QUERIES
+// ------------------
+
+// Large desktops
+@import "responsive/responsive-1200px-min";
+
+// Tablets to regular desktops
+@import "responsive/responsive-768px-979px";
+
+// Phones to portrait tablets and narrow desktops
+@import "responsive/responsive-767px-max";
+
+
+// RESPONSIVE NAVBAR
+// ------------------
+
+// From 979px and below, show a button to toggle navbar contents
+@import "responsive/responsive-navbar";
+
+
+
+
+
+/**
+ * App styles
+ */
+@import "app/entypo";
+
+@import "app/styles";
+@import "app/login";
+@import "app/dashboard";
+@import "app/forms";
+@import "app/frame";
+@import "app/notifications";
+@import "app/tabs";
+@import "app/tables";
+
+@import "app/timeline";
+@import "app/chosen";
+
+@import "app/queries";
