--- a/sass/app/_tabs.scss
+++ b/sass/app/_tabs.scss
@@ -5,6 +5,11 @@
         margin-right: -20px;
       }
     }
+
+    #fullscreener {
+      margin-right: -20px;
+      margin-left: 20px;
+    }
   }
 }
 
