--- a/war/js/views/planboard.html
+++ b/war/js/views/planboard.html
@@ -13,6 +13,22 @@
 
 
 
+    <!-- <section>
+      <p>Try out the Fullscreen API</p>
+
+      <button ng-click="fullScreen()">Request</button>
+      
+      <button id="exit">Exit</button>
+      <button id="toggle">Toggle</button>
+      <button id="request2">Request document</button>
+    </section>
+    <section>
+      <ul>
+        <li id="supported"></li>
+        <li id="status"></li>
+        <li id="element"></li>
+      </ul>
+    </section> -->
 
 
   <!-- timeline controls -->
