hotfix for not working datepicker widget

--- a/sass/app/_dashboard.scss
+++ b/sass/app/_dashboard.scss
@@ -292,6 +292,7 @@
 
           .shortages {
             margin-top: -30px;
+            // display: none;
 
             .span4 {
               padding-right: 40px;
