--- a/war/js/views/dashboard.html
+++ b/war/js/views/dashboard.html
@@ -1,12 +1,10 @@
 <section id="dashboard">
 
-  <div class="alert alert-block" ng-hide="notificationsAllowed">
+  <div class="alert alert-block" ng-hide="config.notifications.webkit.app">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
     WebPaige can display notifications. Would you like to turn that on?
-    <button class="btn btn-small pull-right" data-dismiss="alert">Close</button>
-    <button class="btn btn-small btn-success pull-right" ng-click="allowNotifications()">Activate Notifications</button>
+    <button id="activation" class="btn btn-small btn-success" ng-click="allowWebkitNotifications()" data-dismiss="alert">Activate Notifications</button>
   </div>
-
-<button class="btn btn-small" ng-click="setNotification()">Set Notification</button>
 
   <div class="well well-large greetings">
     <h2>{{ui.dashboard.welcome}}, {{app.resources.name}}</h2>
@@ -35,7 +33,7 @@
 
             <header>
               <h4>{{pie.name}}</h4>
-              <!-- <button class="btn btn-mini pull-right"><i class="icon-remove"></i></button> -->
+              <button type="button" class="close">&times;</button>
             </header>
 
             <div class="blocks">
