notifications turned off temporarily

--- a/war/js/views/dashboard.html
+++ b/war/js/views/dashboard.html
@@ -1,10 +1,10 @@
 <section id="dashboard">
 
-  <div class="alert alert-block" ng-hide="config.notifications.webkit.app || !config.notifications.webkit.user || !browser.webkit">
+  <!-- <div class="alert alert-block" ng-hide="config.notifications.webkit.app || !config.notifications.webkit.user || !browser.webkit">
     <button type="button" class="close" data-dismiss="alert">&times;</button>
     WebPaige can display notifications. Would you like to turn that on?
     <button id="activation" class="btn btn-small btn-success" ng-click="allowWebkitNotifications()" data-dismiss="alert">Activate Notifications</button>
-  </div>
+  </div> -->
 
   <div class="well well-large greetings">
     <h2>{{ui.dashboard.welcome}}, {{app.resources.name}}</h2>
