first stage in timeline cores

--- a/war/js/views/planboard.html
+++ b/war/js/views/planboard.html
@@ -1,4 +1,4 @@
-<section id="planboard">
+<section id="planboard" ng-controller="timeline">
 
   <!-- page header -->
   <div class="page-header">
@@ -13,7 +13,7 @@
 
 
   <!-- timeline controls -->
-  <div class="row-fluid" id="timeline-controls">
+  <div class="row-fluid" id="timeline-controls" ng-controller="timeline-navigation">
 
     <!-- core timeline controls -->
     <div class="pull-left" style="margin-top: 10px">
