profile timeline finished & timeline core finished

--- a/war/js/views/planboard.html
+++ b/war/js/views/planboard.html
@@ -280,7 +280,7 @@
         </div>
         <div ng-show="views.slot.add">
           <button type="button" 
-                  ng-click="timelineOAdd('true', slot)" 
+                  ng-click="timelineOnAdd('true', slot)" 
                   class="btn btn-success">{{ui.planboard.add}}</button>
         </div>
         <div ng-show="views.slot.edit">
