language corrections on planboard statistics

--- a/war/js/views/planboard.html
+++ b/war/js/views/planboard.html
@@ -570,7 +570,7 @@
                       <span class="percentage">%</span>
                     </div>
                     <div class="info">                    
-                      <h4>More people then expected</h4>
+                      <h4>More people than expected</h4>
                       <h5>{{data.aggs.durations.more | calculateTimeInDays}}</h5> 
                       <small class="muted">days</small>, 
                       <h5>{{data.aggs.durations.more | calculateTimeInHours}}</h5> 
@@ -585,7 +585,7 @@
                       <span class="percentage">%</span>
                     </div>
                     <div class="info">                    
-                      <h4>Just so many people as wished</h4>
+                      <h4>Just as many people as wished</h4>
                       <h5>{{data.aggs.durations.even | calculateTimeInDays}}</h5> 
                       <small class="muted">days</small>, 
                       <h5>{{data.aggs.durations.even | calculateTimeInHours}}</h5> 
@@ -600,7 +600,7 @@
                       <span class="percentage">%</span>
                     </div>
                     <div class="info">
-                      <h4>Less people then expected</h4>
+                      <h4>Less people than expected</h4>
                       <h5>{{data.aggs.durations.less | calculateTimeInDays}}</h5> 
                       <small class="muted">days</small>, 
                       <h5>{{data.aggs.durations.less | calculateTimeInHours}}</h5> 
