--- a/sass/bootstrap/_buttons.scss
+++ b/sass/bootstrap/_buttons.scss
@@ -252,7 +252,7 @@
 .btn-inverse:hover {
   color: #f2f1ed;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.35);
-  font-weight: lighter;
+  // font-weight: lighter;
 }
 .btn-primary.active,
 .btn-warning.active,
