--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -2,12 +2,17 @@
  * Bootstrap
  */
 
+
+
 // Core variables and mixins
 @import "variables"; // Modify this for custom colors, font-sizes, etc
 @import "mixins";
 
 // CSS Reset
 @import "reset";
+
+
+
 
 // Grid system and page structure
 @import "bootstrap/scaffolding";
@@ -77,8 +82,8 @@
 // -------------------------
 // Required since we compile the responsive stuff separately
 
-@import "variables"; // Modify this for custom colors, font-sizes, etc
-@import "mixins";
+// @import "variables"; // Modify this for custom colors, font-sizes, etc
+// @import "mixins";
 
 
 // RESPONSIVE CLASSES
