html minified and all watchers for html, css and js in place

--- a/war/js/views/groups.html
+++ b/war/js/views/groups.html
@@ -352,7 +352,7 @@
           <button type="button"
                   class="btn"
                   style="margin-right:5px"
-                  bs-popover="'js/views/elements/groups-wish.html'" 
+                  bs-popover="'dist/views/groups-wish.html'" 
                   data-placement="bottom"
                   data-title="Behoefte wijzigen"><span class="badge badge-inset" ng-show="wished">{{wish}}</span> Behoefte</button>
 
