--- a/war/js/views/dashboard.html
+++ b/war/js/views/dashboard.html
@@ -104,7 +104,7 @@
 
               <div class="shorter" ng-show="pie.shortages.current.length > 0 || pie.shortages.next.length > 0">
                 <div class="btn-group">
-                  <button class="btn btn-mini"
+                  <!-- <button class="btn btn-mini"
                           ng-click="shortageHolders['shortages-' + pie.id] = true"
                           ng-hide="shortageHolders['shortages-' + pie.id]">
                           Tekorten ({{pie.shortages.total}}) <i class="icon-chevron-down"></i>
@@ -113,7 +113,7 @@
                           ng-click="shortageHolders['shortages-' + pie.id] = false"
                           ng-show="shortageHolders['shortages-' + pie.id]">
                           Tekorten ({{pie.shortages.total}}) <i class="icon-chevron-up"></i>
-                  </button>
+                  </button> -->
                 </div>
               </div>
 
@@ -133,7 +133,7 @@
                       <small class="muted">van</small>, 
                       <h5>{{shortage.end * 1000 | nicelyDate}}</h5> 
                       <small class="muted">tot</small>
-                      <button class="btn btn-mini pull-right"><i class="icon-chevron-right"></i></button>
+                      <!-- <button class="btn btn-mini pull-right"><i class="icon-chevron-right"></i></button> -->
                     </li>
                   </ul>
                 </div>
@@ -147,7 +147,7 @@
                       <small class="muted">van</small>, 
                       <h5>{{shortage.end * 1000 | nicelyDate}}</h5> 
                       <small class="muted">tot</small>
-                      <button class="btn btn-mini pull-right"><i class="icon-chevron-right"></i></button>
+                      <!-- <button class="btn btn-mini pull-right"><i class="icon-chevron-right"></i></button> -->
                     </li>
                   </ul>
                 </div>
