--- a/sass/bootstrap/_accordion.scss
+++ b/sass/bootstrap/_accordion.scss
@@ -3,13 +3,12 @@
 // --------------------------------------------------
 
 
-
-
-/* @group accordions */
-
+// Parent container
 .accordion {
   margin-bottom: $baseLineHeight;
 }
+
+// Group == heading + body
 .accordion-group {
   margin-bottom: 2px;
   border: 1px solid #e5e5e5;
@@ -21,56 +20,15 @@
 .accordion-heading .accordion-toggle {
   display: block;
   padding: 8px 15px;
-  // those under are new
-  background-color: #e6e4da;
-  color: #433c2d;
 }
-.accordion-heading .accordion-toggle:hover {
-  background-color: #d8d6cb;
-}
+
+// General toggle styles
 .accordion-toggle {
   cursor: pointer;
 }
-a.accordion-toggle {
-  text-decoration: none;
-}
+
+// Inner needs the styles because you can't animate properly with any styles on the element
 .accordion-inner {
   padding: 9px 15px;
   border-top: 1px solid #e5e5e5;
-  // this is new
-  background-color: #fff;
 }
-
-/* @end */
-
-
-
-// Parent container
-// .accordion {
-//   margin-bottom: $baseLineHeight;
-// }
-
-// // Group == heading + body
-// .accordion-group {
-//   margin-bottom: 2px;
-//   border: 1px solid #e5e5e5;
-//   @include border-radius($baseBorderRadius);
-// }
-// .accordion-heading {
-//   border-bottom: 0;
-// }
-// .accordion-heading .accordion-toggle {
-//   display: block;
-//   padding: 8px 15px;
-// }
-
-// // General toggle styles
-// .accordion-toggle {
-//   cursor: pointer;
-// }
-
-// // Inner needs the styles because you can't animate properly with any styles on the element
-// .accordion-inner {
-//   padding: 9px 15px;
-//   border-top: 1px solid #e5e5e5;
-// }
