--- a/sass/bootstrap/_breadcrumbs.scss
+++ b/sass/bootstrap/_breadcrumbs.scss
@@ -2,47 +2,23 @@
 // Breadcrumbs
 // --------------------------------------------------
 
-/* @group breadcrumps */
 
 .breadcrumb {
-  margin: 0 0 20px;
   padding: 8px 15px;
-  border-radius: 4px;
-  background-color: #e6e4da;
+  margin: 0 0 $baseLineHeight;
   list-style: none;
+  background-color: #f5f5f5;
+  @include border-radius($baseBorderRadius);
+  > li {
+    display: inline-block;
+    @include ie7-inline-block();
+    text-shadow: 0 1px 0 $white;
+    > .divider {
+      padding: 0 5px;
+      color: #ccc;
+    }
+  }
+  .active {
+    color: $grayLight;
+  }
 }
-.breadcrumb li {
-  display: inline-block;
-  *display: inline;
-  *zoom: 1;
-}
-.breadcrumb .divider {
-  padding: 0 5px;
-  color: #433c2d;
-}
-.breadcrumb .active {
-  color: #433c2d;
-}
-
-/* @end */
-
-
-// .breadcrumb {
-//   padding: 8px 15px;
-//   margin: 0 0 $baseLineHeight;
-//   list-style: none;
-//   background-color: #f5f5f5;
-//   @include border-radius($baseBorderRadius);
-//   > li {
-//     display: inline-block;
-//     @include ie7-inline-block();
-//     text-shadow: 0 1px 0 $white;
-//     > .divider {
-//       padding: 0 5px;
-//       color: #ccc;
-//     }
-//   }
-//   .active {
-//     color: $grayLight;
-//   }
-// }
