--- a/sass/bootstrap/_buttons.scss
+++ b/sass/bootstrap/_buttons.scss
@@ -6,139 +6,67 @@
 // Base styles
 // --------------------------------------------------
 
-
-
+// Core
 .btn {
   display: inline-block;
-  margin-bottom: 0;
+  @include ie7-inline-block();
   padding: 5px 12px 5px;
-  border: 1px solid #f5f5f5;
-  border-bottom-color: #b3b3b3;
-  border-radius: 4px;
-  background-color: #f5f5f5;
-  background-image: -ms-linear-gradient(top, #ffffff, #e6e6e6);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#e6e6e6));
-  background-image: -webkit-linear-gradient(top, #ffffff, #e6e6e6);
-  background-image: -o-linear-gradient(top, #ffffff, #e6e6e6);
-  background-image: linear-gradient(top, #ffffff, #e6e6e6);
-  background-image: -moz-linear-gradient(top, #ffffff, #e6e6e6);
-  background-repeat: repeat-x;
-  color: #000;
-  vertical-align: middle;
+  margin-bottom: 0; // For input.btn
+  font-size: ($baseFontSize - 2);
+  font-weight: lighter;
+  line-height: ($baseLineHeight - 2);
   text-align: center;
-  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
-  font-weight: normal;
-  line-height: 18px;
+
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
+
+  vertical-align: middle;
   cursor: pointer;
-  *display: inline;
-  *margin-left: .3em;
-  *line-height: 20px;
-  *background-color: #e6e6e6;
-  *border: 0;
-  *zoom: 1;
+
+  @include buttonBackground($btnBackground, $btnBackgroundHighlight, $grayDark, 0 1px 1px rgba(255,255,255,.85));
+
+  border: 1px solid $btnBorder;
+  *border: 0; // Remove the border to prevent IE7's black border on input:focus
+  border-bottom-color: darken($btnBorder, 10%);
+  @include border-radius($baseBorderRadius);
+  @include ie7-restore-left-whitespace(); // Give IE7 some love
+  
+  @include box-shadow(inset 0 1px 0 rgba(255,255,255,.05), 0 1px 2px rgba(0,0,0,.05));
+
+  // Hover/focus state
+  &:hover,
+  &:focus {
+    color: $grayDark;
+    text-decoration: none;
+    background-position: 0 -15px;
+
+    // transition is only when going to hover/focus, otherwise the background
+    // behind the gradient (there for IE<=9 fallback) gets mismatched
+    @include transition(background-position .1s linear);
+  }
+
+  // Focus state for keyboard and accessibility
+  &:focus {
+    @include tab-focus();
+  }
+
+  // Active state
+  &.active,
+  &:active {
+    background-image: none;
+    outline: 0;
+    // @include box-shadow(inset 0 2px 4px rgba(0,0,0,.15), 0 1px 2px rgba(0,0,0,.05));
+  }
+
+  // Disabled state
+  &.disabled,
+  &[disabled] {
+    cursor: default;
+    background-image: none;
+    @include opacity(65);
+    @include box-shadow(none);
+  }
+
 }
-.btn:hover,
-.btn:active,
-.btn.active,
-.btn.disabled,
-.btn[disabled] {
-  background-color: #e6e6e6;
-  *background-color: #d9d9d9;
-}
-.btn:active,
-.btn.active {
-  background-color: #cccccc \9;
-}
-.btn:first-child {
-  *margin-left: 0;
-}
-.btn:hover {
-  background-color: #e6e6e6;
-  background-position: 0 -15px;
-  color: #333333;
-  text-decoration: none;
-  transition: background-position 0.1s linear;
-  *background-color: #d9d9d9;
-}
-.btn:focus {
-  outline: thin dotted #333;
-  outline: 5px auto -webkit-focus-ring-color;
-  outline-offset: -2px;
-}
-.btn.active,
-.btn:active {
-  outline: 0;
-  background-color: #e6e6e6;
-  background-color: #d9d9d9 \9;
-  background-image: none;
-  box-shadow: inset 0 2px 3px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05);
-}
-.btn.disabled,
-.btn[disabled] {
-  background-color: #e6e6e6;
-  background-image: none;
-  box-shadow: none;
-  opacity: 0.65;
-  filter: alpha(opacity=65);
-  cursor: default;
-}
-
-
-
-
-// // Core
-// .btn {
-//   display: inline-block;
-//   @include ie7-inline-block();
-//   padding: 4px 12px;
-//   margin-bottom: 0; // For input.btn
-//   font-size: $baseFontSize;
-//   line-height: $baseLineHeight;
-//   text-align: center;
-//   vertical-align: middle;
-//   cursor: pointer;
-//   @include buttonBackground($btnBackground, $btnBackgroundHighlight, $grayDark, 0 1px 1px rgba(255,255,255,.75));
-//   border: 1px solid $btnBorder;
-//   *border: 0; // Remove the border to prevent IE7's black border on input:focus
-//   border-bottom-color: darken($btnBorder, 10%);
-//   @include border-radius($baseBorderRadius);
-//   @include ie7-restore-left-whitespace(); // Give IE7 some love
-//   @include box-shadow(inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05));
-
-//   // Hover state
-//   &:hover {
-//     color: $grayDark;
-//     text-decoration: none;
-//     background-position: 0 -15px;
-
-//     // transition is only when going to hover, otherwise the background
-//     // behind the gradient (there for IE<=9 fallback) gets mismatched
-//     @include transition(background-position .1s linear);
-//   }
-
-//   // Focus state for keyboard and accessibility
-//   &:focus {
-//     @include tab-focus();
-//   }
-
-//   // Active state
-//   &.active,
-//   &:active {
-//     background-image: none;
-//     outline: 0;
-//     @include box-shadow(inset 0 2px 4px rgba(0,0,0,.15), 0 1px 2px rgba(0,0,0,.05));
-//   }
-
-//   // Disabled state
-//   &.disabled,
-//   &[disabled] {
-//     cursor: default;
-//     background-image: none;
-//     @include opacity(65);
-//     @include box-shadow(none);
-//   }
-
-// }
 
 
 
@@ -182,294 +110,68 @@
 // Block button
 // -------------------------
 
-
-.btn-large {
-  padding: 9px 14px;
-  border-radius: 5px;
-  font-weight: normal;
-  font-size: 15px;
-  line-height: normal;
-}
-.btn-large [class^="icon-"] {
-  margin-top: 1px;
-}
-.btn-small {
-  padding: 5px 9px;
-  font-size: 11px;
-  line-height: 16px;
-}
-.btn-small [class^="icon-"] {
-  margin-top: -1px;
-}
-.btn-mini {
-  padding: 2px 6px;
-  font-size: 11px;
-  line-height: 14px;
+.btn-block {
+  display: block;
+  width: 100%;
+  padding-left: 0;
+  padding-right: 0;
+  @include box-sizing(border-box);
 }
 
+// Vertically space out multiple block buttons
+.btn-block + .btn-block {
+  margin-top: 5px;
+}
 
-
-// .btn-block {
-//   display: block;
-//   width: 100%;
-//   padding-left: 0;
-//   padding-right: 0;
-//   @include box-sizing(border-box);
-// }
-
-// // Vertically space out multiple block buttons
-// .btn-block + .btn-block {
-//   margin-top: 5px;
-// }
-
-// // Specificity overrides
-// input[type="submit"],
-// input[type="reset"],
-// input[type="button"] {
-//   &.btn-block {
-//     width: 100%;
-//   }
-// }
+// Specificity overrides
+input[type="submit"],
+input[type="reset"],
+input[type="button"] {
+  &.btn-block {
+    width: 100%;
+  }
+}
 
 
 
 // Alternate buttons
 // --------------------------------------------------
 
-
-
-.btn-primary,
-.btn-primary:hover,
-.btn-warning,
-.btn-warning:hover,
-.btn-danger,
-.btn-danger:hover,
-.btn-success,
-.btn-success:hover,
-.btn-info,
-.btn-info:hover,
-.btn-inverse,
-.btn-inverse:hover {
-  color: #f2f1ed;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.35);
-  // font-weight: lighter;
-}
+// Provide *some* extra contrast for those who can get it
 .btn-primary.active,
 .btn-warning.active,
 .btn-danger.active,
 .btn-success.active,
 .btn-info.active,
 .btn-inverse.active {
-  color: rgba(255, 255, 255, 0.75);
+  color: rgba(255,255,255,.75);
 }
-.btn {
-  border-color: #ccc;
-  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-}
+
+// Set the backgrounds
+// -------------------------
 .btn-primary {
-  border-color: #65619b #65619b #7772b5;
-  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-  background-color: #7772b5;
-  background-image: -ms-linear-gradient(top, #7772b5, #65619b);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#7772b5), to(#65619b));
-  background-image: -webkit-linear-gradient(top, #7772b5, #65619b);
-  background-image: -o-linear-gradient(top, #7772b5, #65619b);
-  background-image: -moz-linear-gradient(top, #7772b5, #65619b);
-  background-image: linear-gradient(top, #7772b5, #65619b);
-  background-repeat: repeat-x;
-  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#6e69a8', endColorstr='#7772b5', GradientType=0);
-  filter: progid:dximagetransform.microsoft.gradient(enabled=false);
-  *background-color: #7772b5;
+  @include buttonBackground($btnPrimaryBackground, $btnPrimaryBackgroundHighlight);
 }
-.btn-primary:hover,
-.btn-primary:active,
-.btn-primary.active,
-.btn-primary.disabled,
-.btn-primary[disabled] {
-  background-color: #65619b;
-  *background-color: #65619b;
-}
-.btn-primary:active,
-.btn-primary.active {
-  background-color: #65619b \9;
-}
+// Warning appears are orange
 .btn-warning {
-  border-color: #e28b00 #e28b00 #e6a02f;
-  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-  background-color: #e6a02f;
-  background-image: -ms-linear-gradient(top, #e6a02f, #e28b00);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#e6a02f), to(#e28b00));
-  background-image: -webkit-linear-gradient(top, #e6a02f, #e28b00);
-  background-image: -o-linear-gradient(top, #e6a02f, #e28b00);
-  background-image: -moz-linear-gradient(top, #e6a02f, #e28b00);
-  background-image: linear-gradient(top, #e6a02f, #e28b00);
-  background-repeat: repeat-x;
-  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#e6a02f', endColorstr='#e28b00', GradientType=0);
-  filter: progid:dximagetransform.microsoft.gradient(enabled=false);
-  *background-color: #e6a02f;
+  @include buttonBackground($btnWarningBackground, $btnWarningBackgroundHighlight);
 }
-.btn-warning:hover,
-.btn-warning:active,
-.btn-warning.active,
-.btn-warning.disabled,
-.btn-warning[disabled] {
-  background-color: #e28b00;
-  *background-color: #e28b00;
-}
-.btn-warning:active,
-.btn-warning.active {
-  background-color: #e28b00 \9;
-}
+// Danger and error appear as red
 .btn-danger {
-  border-color: #ab312f #ab312f #ba5855;
-  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-  background-color: #ba5855;
-  background-image: -ms-linear-gradient(top, #ba5855, #ab312f);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ba5855), to(#ab312f));
-  background-image: -webkit-linear-gradient(top, #ba5855, #ab312f);
-  background-image: -o-linear-gradient(top, #ba5855, #ab312f);
-  background-image: -moz-linear-gradient(top, #ba5855, #ab312f);
-  background-image: linear-gradient(top, #ba5855, #ab312f);
-  background-repeat: repeat-x;
-  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ba5855', endColorstr='#ab312f', GradientType=0);
-  filter: progid:dximagetransform.microsoft.gradient(enabled=false);
-  *background-color: #ba5855;
+  @include buttonBackground($btnDangerBackground, $btnDangerBackgroundHighlight);
 }
-.btn-danger:hover,
-.btn-danger:active,
-.btn-danger.active,
-.btn-danger.disabled,
-.btn-danger[disabled] {
-  background-color: #ab312f;
-  *background-color: #ab312f;
-}
-.btn-danger:active,
-.btn-danger.active {
-  background-color: #ab312f \9;
-}
+// Success appears as green
 .btn-success {
-  border-color: #4d834d #4d834d #6f9a6d;
-  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-  background-color: #6f9a6d;
-  background-image: -ms-linear-gradient(top, #6f9a6d, #4d834d);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#6f9a6d), to(#4d834d));
-  background-image: -webkit-linear-gradient(top, #6f9a6d, #4d834d);
-  background-image: -o-linear-gradient(top, #6f9a6d, #4d834d);
-  background-image: -moz-linear-gradient(top, #6f9a6d, #4d834d);
-  background-image: linear-gradient(top, #6f9a6d, #4d834d);
-  background-repeat: repeat-x;
-  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#6f9a6d', endColorstr='#4d834d', GradientType=0);
-  filter: progid:dximagetransform.microsoft.gradient(enabled=false);
-  *background-color: #6f9a6d;
+  @include buttonBackground($btnSuccessBackground, $btnSuccessBackgroundHighlight);
 }
-.btn-success:hover,
-.btn-success:active,
-.btn-success.active,
-.btn-success.disabled,
-.btn-success[disabled] {
-  background-color: #4d834d;
-  *background-color: #4d834d;
-}
-.btn-success:active,
-.btn-success.active {
-  background-color: #4d834d \9;
-}
+// Info appears as a neutral blue
 .btn-info {
-  border-color: #2f96b4 #2f96b4 #35a8c9;
-  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-  background-color: #35a8c9;
-  background-image: -ms-linear-gradient(top, #35a8c9, #2f96b4);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#35a8c9), to(#2f96b4));
-  background-image: -webkit-linear-gradient(top, #35a8c9, #2f96b4);
-  background-image: -o-linear-gradient(top, #35a8c9, #2f96b4);
-  background-image: -moz-linear-gradient(top, #35a8c9, #2f96b4);
-  background-image: linear-gradient(top, #35a8c9, #2f96b4);
-  background-repeat: repeat-x;
-  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#35a8c9', endColorstr='#2f96b4', GradientType=0);
-  filter: progid:dximagetransform.microsoft.gradient(enabled=false);
-  *background-color: #35a8c9;
+  @include buttonBackground($btnInfoBackground, $btnInfoBackgroundHighlight);
 }
-.btn-info:hover,
-.btn-info:active,
-.btn-info.active,
-.btn-info.disabled,
-.btn-info[disabled] {
-  background-color: #2f96b4;
-  *background-color: #2f96b4;
-}
-.btn-info:active,
-.btn-info.active {
-  background-color: #2f96b4 \9;
-}
+// Inverse appears as dark gray
 .btn-inverse {
-  border-color: #222222 #222222 #000000;
-  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-  background-color: #414141;
-  background-image: -ms-linear-gradient(top, #555555, #222222);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#555555), to(#222222));
-  background-image: -webkit-linear-gradient(top, #555555, #222222);
-  background-image: -o-linear-gradient(top, #555555, #222222);
-  background-image: -moz-linear-gradient(top, #555555, #222222);
-  background-image: linear-gradient(top, #555555, #222222);
-  background-repeat: repeat-x;
-  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#555555', endColorstr='#222222', GradientType=0);
-  filter: progid:dximagetransform.microsoft.gradient(enabled=false);
-  *background-color: #222222;
+  @include buttonBackground($btnInverseBackground, $btnInverseBackgroundHighlight);
 }
-.btn-inverse:hover,
-.btn-inverse:active,
-.btn-inverse.active,
-.btn-inverse.disabled,
-.btn-inverse[disabled] {
-  background-color: #222222;
-  *background-color: #151515;
-}
-.btn-inverse:active,
-.btn-inverse.active {
-  background-color: #080808 \9;
-}
-
-
-// // Provide *some* extra contrast for those who can get it
-// .btn-primary.active,
-// .btn-warning.active,
-// .btn-danger.active,
-// .btn-success.active,
-// .btn-info.active,
-// .btn-inverse.active {
-//   color: rgba(255,255,255,.75);
-// }
-
-// // Set the backgrounds
-// // -------------------------
-// .btn {
-//   // reset here as of 2.0.3 due to Recess property order
-//   border-color: #c5c5c5;
-//   border-color: rgba(0,0,0,.15) rgba(0,0,0,.15) rgba(0,0,0,.25);
-// }
-// .btn-primary {
-//   @include buttonBackground($btnPrimaryBackground, $btnPrimaryBackgroundHighlight);
-// }
-// // Warning appears are orange
-// .btn-warning {
-//   @include buttonBackground($btnWarningBackground, $btnWarningBackgroundHighlight);
-// }
-// // Danger and error appear as red
-// .btn-danger {
-//   @include buttonBackground($btnDangerBackground, $btnDangerBackgroundHighlight);
-// }
-// // Success appears as green
-// .btn-success {
-//   @include buttonBackground($btnSuccessBackground, $btnSuccessBackgroundHighlight);
-// }
-// // Info appears as a neutral blue
-// .btn-info {
-//   @include buttonBackground($btnInfoBackground, $btnInfoBackgroundHighlight);
-// }
-// // Inverse appears as dark gray
-// .btn-inverse {
-//   @include buttonBackground($btnInverseBackground, $btnInverseBackgroundHighlight);
-// }
 
 
 // Cross-browser Jank
@@ -477,108 +179,57 @@
 
 button.btn,
 input[type="submit"].btn {
+
+  // Firefox 3.6 only I believe
+  &::-moz-focus-inner {
+    padding: 0;
+    border: 0;
+  }
+
+  // IE7 has some default padding on button controls
   *padding-top: 3px;
   *padding-bottom: 3px;
-}
-button.btn::-moz-focus-inner,
-input[type="submit"].btn::-moz-focus-inner {
-  padding: 0;
-  border: 0;
-}
-button.btn.btn-large,
-input[type="submit"].btn.btn-large {
-  *padding-top: 7px;
-  *padding-bottom: 7px;
-}
-button.btn.btn-small,
-input[type="submit"].btn.btn-small {
-  *padding-top: 3px;
-  *padding-bottom: 3px;
-}
-button.btn.btn-mini,
-input[type="submit"].btn.btn-mini {
-  *padding-top: 1px;
-  *padding-bottom: 1px;
-}
 
-
-// button.btn,
-// input[type="submit"].btn {
-
-//   // Firefox 3.6 only I believe
-//   &::-moz-focus-inner {
-//     padding: 0;
-//     border: 0;
-//   }
-
-//   // IE7 has some default padding on button controls
-//   *padding-top: 3px;
-//   *padding-bottom: 3px;
-
-//   &.btn-large {
-//     *padding-top: 7px;
-//     *padding-bottom: 7px;
-//   }
-//   &.btn-small {
-//     *padding-top: 3px;
-//     *padding-bottom: 3px;
-//   }
-//   &.btn-mini {
-//     *padding-top: 1px;
-//     *padding-bottom: 1px;
-//   }
-// }
+  &.btn-large {
+    *padding-top: 7px;
+    *padding-bottom: 7px;
+  }
+  &.btn-small {
+    *padding-top: 3px;
+    *padding-bottom: 3px;
+  }
+  &.btn-mini {
+    *padding-top: 1px;
+    *padding-bottom: 1px;
+  }
+}
 
 
 // Link buttons
 // --------------------------------------------------
 
+// Make a button look and behave like a link
 .btn-link,
 .btn-link:active,
 .btn-link[disabled] {
   background-color: transparent;
   background-image: none;
-  box-shadow: none;
+  @include box-shadow(none);
 }
 .btn-link {
   border-color: transparent;
-  border-radius: 0;
-  color: #65619b;
-  text-shadow: none;
   cursor: pointer;
+  color: $linkColor;
+  @include border-radius(0);
 }
-.btn-link:hover {
-  background-color: transparent;
-  color: #53507c;
+.btn-link:hover,
+.btn-link:focus {
+  color: $linkColorHover;
   text-decoration: underline;
-  text-shadow: none;
+  background-color: transparent;
 }
-.btn-link[disabled]:hover {
-  color: #333333;
+.btn-link[disabled]:hover,
+.btn-link[disabled]:focus {
+  color: $grayDark;
   text-decoration: none;
 }
-
-
-// // Make a button look and behave like a link
-// .btn-link,
-// .btn-link:active,
-// .btn-link[disabled] {
-//   background-color: transparent;
-//   background-image: none;
-//   @include box-shadow(none);
-// }
-// .btn-link {
-//   border-color: transparent;
-//   cursor: pointer;
-//   color: $linkColor;
-//   @include border-radius(0);
-// }
-// .btn-link:hover {
-//   color: $linkColorHover;
-//   text-decoration: underline;
-//   background-color: transparent;
-// }
-// .btn-link[disabled]:hover {
-//   color: $grayDark;
-//   text-decoration: none;
-// }
