--- a/sass/bootstrap/_close.scss
+++ b/sass/bootstrap/_close.scss
@@ -5,53 +5,28 @@
 
 .close {
   float: right;
-  color: #000000;
-  text-shadow: 0 1px 0 #ffffff;
-  font-weight: bold;
   font-size: 20px;
-  line-height: 20px;
-  opacity: 0.2;
-  filter: alpha(opacity=20);
+  font-weight: bold;
+  line-height: $baseLineHeight;
+  color: $black;
+  text-shadow: 0 1px 0 rgba(255,255,255,1);
+  @include opacity(20);
+  &:hover,
+  &:focus {
+    color: $black;
+    text-decoration: none;
+    cursor: pointer;
+    @include opacity(40);
+  }
 }
-.close:hover {
-  color: #000000;
-  text-decoration: none;
-  opacity: 0.4;
-  filter: alpha(opacity=40);
-  cursor: pointer;
-}
+
+// Additional properties for button version
+// iOS requires the button element instead of an anchor tag.
+// If you want the anchor version, it requires `href="#"`.
 button.close {
   padding: 0;
-  border: 0;
-  background: transparent;
   cursor: pointer;
+  background: transparent;
+  border: 0;
   -webkit-appearance: none;
 }
-
-
-// .close {
-//   float: right;
-//   font-size: 20px;
-//   font-weight: bold;
-//   line-height: $baseLineHeight;
-//   color: $black;
-//   text-shadow: 0 1px 0 rgba(255,255,255,1);
-//   @include opacity(20);
-//   &:hover {
-//     color: $black;
-//     text-decoration: none;
-//     cursor: pointer;
-//     @include opacity(40);
-//   }
-// }
-
-// // Additional properties for button version
-// // iOS requires the button element instead of an anchor tag.
-// // If you want the anchor version, it requires `href="#"`.
-// button.close {
-//   padding: 0;
-//   cursor: pointer;
-//   background: transparent;
-//   border: 0;
-//   -webkit-appearance: none;
-// }
