--- a/sass/bootstrap/_hero-unit.scss
+++ b/sass/bootstrap/_hero-unit.scss
@@ -3,48 +3,23 @@
 // --------------------------------------------------
 
 
-// .hero-unit {
-//   padding: 60px;
-//   margin-bottom: 30px;
-//   font-size: 18px;
-//   font-weight: 200;
-//   line-height: $baseLineHeight * 1.5;
-//   color: $heroUnitLeadColor;
-//   background-color: $heroUnitBackground;
-//   @include border-radius(6px);
-//   h1 {
-//     margin-bottom: 0;
-//     font-size: 60px;
-//     line-height: 1;
-//     color: $heroUnitHeadingColor;
-//     letter-spacing: -1px;
-//   }
-//   li {
-//     line-height: $baseLineHeight * 1.5; // Reset since we specify in type.scss
-//   }
-// }
-
-
 .hero-unit {
-  margin-bottom: 30px;
   padding: 60px;
-  border: 1px solid #e3e3e3;
-  border-bottom: 1px solid #fdfdfa;
-  border-radius: 6px;
-  background-color: #e5e2d5;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.30);
-  color: inherit;
-  font-weight: 200;
+  margin-bottom: 30px;
   font-size: 18px;
-  line-height: 30px;
-}
-.hero-unit h1 {
-  margin-bottom: 0;
-  color: inherit;
-  letter-spacing: -1px;
-  font-size: 60px;
-  line-height: 1;
-}
-.hero-unit li {
-  line-height: 30px;
+  font-weight: 200;
+  line-height: $baseLineHeight * 1.5;
+  color: $heroUnitLeadColor;
+  background-color: $heroUnitBackground;
+  @include border-radius(6px);
+  h1 {
+    margin-bottom: 0;
+    font-size: 60px;
+    line-height: 1;
+    color: $heroUnitHeadingColor;
+    letter-spacing: -1px;
+  }
+  li {
+    line-height: $baseLineHeight * 1.5; // Reset since we specify in type.scss
+  }
 }
