--- a/sass/bootstrap/_labels-badges.scss
+++ b/sass/bootstrap/_labels-badges.scss
@@ -3,165 +3,81 @@
 // --------------------------------------------------
 
 
-// // Base classes
-// .label,
-// .badge {
-//   display: inline-block;
-//   padding: 2px 4px;
-//   font-size: $baseFontSize * .846;
-//   font-weight: bold;
-//   line-height: 14px; // ensure proper line-height if floated
-//   color: $white;
-//   vertical-align: baseline;
-//   white-space: nowrap;
-//   text-shadow: 0 -1px 0 rgba(0,0,0,.25);
-//   background-color: $grayLight;
-// }
-// // Set unique padding and border-radii
-// .label {
-//   @include border-radius(3px);
-// }
-// .badge {
-//   padding-left: 9px;
-//   padding-right: 9px;
-//   @include border-radius(9px);
-// }
-
-// // Empty labels/badges collapse
-// .label,
-// .badge {
-//   &:empty {
-//     display: none;
-//   }
-// }
-
-// // Hover state, but only for links
-// a {
-//   &.label:hover,
-//   &.badge:hover {
-//     color: $white;
-//     text-decoration: none;
-//     cursor: pointer;
-//   }
-// }
-
-// // Colors
-// // Only give background-color difference to links (and to simplify, we don't qualifty with `a` but [href] attribute)
-// @each $item in label, badge {
-//   // Important (red)
-//   .#{$item}-important         { background-color: $errorText; }
-//   .#{$item}-important[href]   { background-color: darken($errorText, 10%); }
-//   // Warnings (orange)
-//   .#{$item}-warning           { background-color: $orange; }
-//   .#{$item}-warning[href]     { background-color: darken($orange, 10%); }
-//   // Success (green)
-//   .#{$item}-success           { background-color: $successText; }
-//   .#{$item}-success[href]     { background-color: darken($successText, 10%); }
-//   // Info (turquoise)
-//   .#{$item}-info              { background-color: $infoText; }
-//   .#{$item}-info[href]        { background-color: darken($infoText, 10%); }
-//   // Inverse (black)
-//   .#{$item}-inverse           { background-color: $grayDark; }
-//   .#{$item}-inverse[href]     { background-color: darken($grayDark, 10%); }
-// }
-
-// // Quick fix for labels/badges in buttons
-// .btn {
-//   .label,
-//   .badge {
-//     position: relative;
-//     top: -1px;
-//   }
-// }
-// .btn-mini {
-//   .label,
-//   .badge {
-//     top: 0;
-//   }
-// }
-
-
-
-
-
-
-/* @group labels */
-
+// Base classes
 .label,
 .badge {
   display: inline-block;
   padding: 2px 4px;
-  background-color: #999999;
-  color: #ffffff;
-  vertical-align: baseline;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-  white-space: nowrap;
+  font-size: $baseFontSize * .846;
   font-weight: bold;
-  font-size: 11.844px;
-  line-height: 14px;
+  line-height: 14px; // ensure proper line-height if floated
+  color: $white;
+  vertical-align: baseline;
+  white-space: nowrap;
+  text-shadow: 0 -1px 0 rgba(0,0,0,.25);
+  background-color: $grayLight;
 }
+// Set unique padding and border-radii
 .label {
-  border-radius: 3px;
+  @include border-radius(3px);
 }
 .badge {
-  padding-right: 9px;
   padding-left: 9px;
-  border-radius: 9px;
-}
-a.label:hover,
-a.badge:hover {
-  color: #ffffff;
-  text-decoration: none;
-  cursor: pointer;
-}
-.label-important,
-.badge-important {
-  background-color: #ba5855;
-}
-.label-important[href],
-.badge-important[href] {
-  background-color: #ab312f;
-}
-.label-warning,
-.badge-warning {
-  background-color: #e6a02f;
-}
-.label-warning[href],
-.badge-warning[href] {
-  background-color: #e28b00;
-}
-.label-success,
-.badge-success {
-  background-color: #6f9a6d;
-}
-.label-success[href],
-.badge-success[href] {
-  background-color: #4d834d;
-}
-.label-info,
-.badge-info {
-  background-color: #3a87ad;
-}
-.label-info[href],
-.badge-info[href] {
-  background-color: #2d6987;
-}
-.label-inverse,
-.badge-inverse {
-  background-color: #333333;
-}
-.label-inverse[href],
-.badge-inverse[href] {
-  background-color: #1a1a1a;
-}
-.btn .label,
-.btn .badge {
-  position: relative;
-  top: -1px;
-}
-.btn-mini .label,
-.btn-mini .badge {
-  top: 0;
+  padding-right: 9px;
+  @include border-radius(9px);
 }
 
-/* @end */
+// Empty labels/badges collapse
+.label,
+.badge {
+  &:empty {
+    display: none;
+  }
+}
+
+// Hover/focus state, but only for links
+a {
+  &.label:hover,
+  &.label:focus,
+  &.badge:hover,
+  &.badge:focus {
+    color: $white;
+    text-decoration: none;
+    cursor: pointer;
+  }
+}
+
+// Colors
+// Only give background-color difference to links (and to simplify, we don't qualifty with `a` but [href] attribute)
+@each $item in label, badge {
+  // Important (red)
+  .#{$item}-important         { background-color: $errorText; }
+  .#{$item}-important[href]   { background-color: darken($errorText, 10%); }
+  // Warnings (orange)
+  .#{$item}-warning           { background-color: $orange; }
+  .#{$item}-warning[href]     { background-color: darken($orange, 10%); }
+  // Success (green)
+  .#{$item}-success           { background-color: $successText; }
+  .#{$item}-success[href]     { background-color: darken($successText, 10%); }
+  // Info (turquoise)
+  .#{$item}-info              { background-color: $infoText; }
+  .#{$item}-info[href]        { background-color: darken($infoText, 10%); }
+  // Inverse (black)
+  .#{$item}-inverse           { background-color: $grayDark; }
+  .#{$item}-inverse[href]     { background-color: darken($grayDark, 10%); }
+}
+
+// Quick fix for labels/badges in buttons
+.btn {
+  .label,
+  .badge {
+    position: relative;
+    top: -1px;
+  }
+}
+.btn-mini {
+  .label,
+  .badge {
+    top: 0;
+  }
+}
