--- a/sass/bootstrap/_pager.scss
+++ b/sass/bootstrap/_pager.scss
@@ -3,60 +3,11 @@
 // --------------------------------------------------
 
 
-// .pager {
-//   margin: $baseLineHeight 0;
-//   list-style: none;
-//   text-align: center;
-//   @include clearfix();
-// }
-// .pager li {
-//   display: inline;
-// }
-// .pager li > a,
-// .pager li > span {
-//   display: inline-block;
-//   padding: 5px 14px;
-//   background-color: #fff;
-//   border: 1px solid #ddd;
-//   @include border-radius(15px);
-// }
-// .pager li > a:hover {
-//   text-decoration: none;
-//   background-color: #f5f5f5;
-// }
-// .pager .next > a,
-// .pager .next > span {
-//   float: right;
-// }
-// .pager .previous > a,
-// .pager .previous > span {
-//   float: left;
-// }
-// .pager .disabled > a,
-// .pager .disabled > a:hover,
-// .pager .disabled > span {
-//   color: $grayLight;
-//   background-color: #fff;
-//   cursor: default;
-// }
-
-
-
-
 .pager {
-  margin: 20px 0;
+  margin: $baseLineHeight 0;
   list-style: none;
   text-align: center;
-  *zoom: 1;
-}
-.pager:before,
-.pager:after {
-  display: table;
-  content: "";
-  line-height: 0;
-}
-.pager:after {
-  clear: both;
+  @include clearfix();
 }
 .pager li {
   display: inline;
@@ -65,17 +16,14 @@
 .pager li > span {
   display: inline-block;
   padding: 5px 14px;
-  border: 1px solid #c6c4ba;
-  border-radius: 15px;
-  background-color: #433c2d;
   background-color: #fff;
-  color: #f7f5eb;
-  color: #676153;
+  border: 1px solid #ddd;
+  @include border-radius(15px);
 }
-.pager li > a:hover {
-  background-color: #e6e4da;
-  color: #676153;
+.pager li > a:hover,
+.pager li > a:focus {
   text-decoration: none;
+  background-color: #f5f5f5;
 }
 .pager .next > a,
 .pager .next > span {
@@ -87,8 +35,9 @@
 }
 .pager .disabled > a,
 .pager .disabled > a:hover,
+.pager .disabled > a:focus,
 .pager .disabled > span {
-  background-color: #e6e4da;
-  color: #676153;
+  color: $grayLight;
+  background-color: #fff;
   cursor: default;
 }
