--- a/sass/bootstrap/_pagination.scss
+++ b/sass/bootstrap/_pagination.scss
@@ -2,241 +2,122 @@
 // Pagination (multiple pages)
 // --------------------------------------------------
 
-// // Space out pagination from surrounding content
-// .pagination {
-//   margin: $baseLineHeight 0;
-// }
-
-// .pagination ul {
-//   // Allow for text-based alignment
-//   display: inline-block;
-//   @include ie7-inline-block();
-//   // Reset default ul styles
-//   margin-left: 0;
-//   margin-bottom: 0;
-//   // Visuals
-//   @include border-radius($baseBorderRadius);
-//   @include box-shadow(0 1px 2px rgba(0,0,0,.05));
-// }
-// .pagination ul > li {
-//   display: inline; // Remove list-style and block-level defaults
-// }
-// .pagination ul > li > a,
-// .pagination ul > li > span {
-//   float: left; // Collapse white-space
-//   padding: 4px 12px;
-//   line-height: $baseLineHeight;
-//   text-decoration: none;
-//   background-color: $paginationBackground;
-//   border: 1px solid $paginationBorder;
-//   border-left-width: 0;
-// }
-// .pagination ul > li > a:hover,
-// .pagination ul > .active > a,
-// .pagination ul > .active > span {
-//   background-color: $paginationActiveBackground;
-// }
-// .pagination ul > .active > a,
-// .pagination ul > .active > span {
-//   color: $grayLight;
-//   cursor: default;
-// }
-// .pagination ul > .disabled > span,
-// .pagination ul > .disabled > a,
-// .pagination ul > .disabled > a:hover {
-//   color: $grayLight;
-//   background-color: transparent;
-//   cursor: default;
-// }
-// .pagination ul > li:first-child > a,
-// .pagination ul > li:first-child > span {
-//   border-left-width: 1px;
-//   @include border-left-radius($baseBorderRadius);
-// }
-// .pagination ul > li:last-child > a,
-// .pagination ul > li:last-child > span {
-//   @include border-right-radius($baseBorderRadius);
-// }
-
-
-// // Alignment
-// // --------------------------------------------------
-
-// .pagination-centered {
-//   text-align: center;
-// }
-// .pagination-right {
-//   text-align: right;
-// }
-
-
-// // Sizing
-// // --------------------------------------------------
-
-// // Large
-// .pagination-large {
-//   ul > li > a,
-//   ul > li > span {
-//     padding: $paddingLarge;
-//     font-size: $fontSizeLarge;
-//   }
-//   ul > li:first-child > a,
-//   ul > li:first-child > span {
-//     @include border-left-radius($borderRadiusLarge);
-//   }
-//   ul > li:last-child > a,
-//   ul > li:last-child > span {
-//     @include border-right-radius($borderRadiusLarge);
-//   }
-// }
-
-// // Small and mini
-// .pagination-mini,
-// .pagination-small {
-//   ul > li:first-child > a,
-//   ul > li:first-child > span {
-//     @include border-left-radius($borderRadiusSmall);
-//   }
-//   ul > li:last-child > a,
-//   ul > li:last-child > span {
-//     @include border-right-radius($borderRadiusSmall);
-//   }
-// }
-
-// // Small
-// .pagination-small {
-//   ul > li > a,
-//   ul > li > span {
-//     padding: $paddingSmall;
-//     font-size: $fontSizeSmall;
-//   }
-// }
-// // Mini
-// .pagination-mini {
-//   ul > li > a,
-//   ul > li > span {
-//     padding: $paddingMini;
-//     font-size: $fontSizeMini;
-//   }
-// }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+// Space out pagination from surrounding content
 .pagination {
-  margin: 20px 0;
+  margin: $baseLineHeight 0;
 }
+
 .pagination ul {
+  // Allow for text-based alignment
   display: inline-block;
-  margin-bottom: 0;
+  @include ie7-inline-block();
+  // Reset default ul styles
   margin-left: 0;
-  border-radius: 4px;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-  *display: inline;
-  *zoom: 1;
+  margin-bottom: 0;
+  // Visuals
+  @include border-radius($baseBorderRadius);
+  @include box-shadow(0 1px 2px rgba(0,0,0,.05));
 }
 .pagination ul > li {
-  display: inline;
+  display: inline; // Remove list-style and block-level defaults
 }
 .pagination ul > li > a,
 .pagination ul > li > span {
-  float: left;
+  float: left; // Collapse white-space
   padding: 4px 12px;
-  border: 1px solid #c6c4ba;
-  border-left-width: 0;
-  background-color: #fff;
-  color: #676153;
+  line-height: $baseLineHeight;
   text-decoration: none;
-  font-weight: normal;
-  line-height: 20px;
+  background-color: $paginationBackground;
+  border: 1px solid $paginationBorder;
+  border-left-width: 0;
 }
 .pagination ul > li > a:hover,
+.pagination ul > li > a:focus,
 .pagination ul > .active > a,
 .pagination ul > .active > span {
-  background-color: #e6e4da;
-  color: #676153;
+  background-color: $paginationActiveBackground;
 }
 .pagination ul > .active > a,
 .pagination ul > .active > span {
-  color: #676153;
+  color: $grayLight;
   cursor: default;
 }
 .pagination ul > .disabled > span,
 .pagination ul > .disabled > a,
-.pagination ul > .disabled > a:hover {
-  background-color: #e6e4da;
-  color: #676153;
+.pagination ul > .disabled > a:hover,
+.pagination ul > .disabled > a:focus {
+  color: $grayLight;
+  background-color: transparent;
   cursor: default;
 }
 .pagination ul > li:first-child > a,
 .pagination ul > li:first-child > span {
   border-left-width: 1px;
-  border-bottom-left-radius: 4px;
-  border-top-left-radius: 4px;
+  @include border-left-radius($baseBorderRadius);
 }
 .pagination ul > li:last-child > a,
 .pagination ul > li:last-child > span {
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px;
+  @include border-right-radius($baseBorderRadius);
 }
+
+
+// Alignment
+// --------------------------------------------------
+
 .pagination-centered {
   text-align: center;
 }
 .pagination-right {
   text-align: right;
 }
-.pagination-large ul > li > a,
-.pagination-large ul > li > span {
-  padding: 11px 19px;
-  font-size: 17.5px;
+
+
+// Sizing
+// --------------------------------------------------
+
+// Large
+.pagination-large {
+  ul > li > a,
+  ul > li > span {
+    padding: $paddingLarge;
+    font-size: $fontSizeLarge;
+  }
+  ul > li:first-child > a,
+  ul > li:first-child > span {
+    @include border-left-radius($borderRadiusLarge);
+  }
+  ul > li:last-child > a,
+  ul > li:last-child > span {
+    @include border-right-radius($borderRadiusLarge);
+  }
 }
-.pagination-large ul > li:first-child > a,
-.pagination-large ul > li:first-child > span {
-  border-bottom-left-radius: 6px;
-  border-top-left-radius: 6px;
+
+// Small and mini
+.pagination-mini,
+.pagination-small {
+  ul > li:first-child > a,
+  ul > li:first-child > span {
+    @include border-left-radius($borderRadiusSmall);
+  }
+  ul > li:last-child > a,
+  ul > li:last-child > span {
+    @include border-right-radius($borderRadiusSmall);
+  }
 }
-.pagination-large ul > li:last-child > a,
-.pagination-large ul > li:last-child > span {
-  border-top-right-radius: 6px;
-  border-bottom-right-radius: 6px;
+
+// Small
+.pagination-small {
+  ul > li > a,
+  ul > li > span {
+    padding: $paddingSmall;
+    font-size: $fontSizeSmall;
+  }
 }
-.pagination-mini ul > li:first-child > a,
-.pagination-small ul > li:first-child > a,
-.pagination-mini ul > li:first-child > span,
-.pagination-small ul > li:first-child > span {
-  border-bottom-left-radius: 3px;
-  border-top-left-radius: 3px;
-}
-.pagination-mini ul > li:last-child > a,
-.pagination-small ul > li:last-child > a,
-.pagination-mini ul > li:last-child > span,
-.pagination-small ul > li:last-child > span {
-  border-top-right-radius: 3px;
-  border-bottom-right-radius: 3px;
-}
-.pagination-small ul > li > a,
-.pagination-small ul > li > span {
-  padding: 2px 10px;
-  font-size: 11.9px;
-}
-.pagination-mini ul > li > a,
-.pagination-mini ul > li > span {
-  padding: 1px 6px;
-  font-size: 10.5px;
+// Mini
+.pagination-mini {
+  ul > li > a,
+  ul > li > span {
+    padding: $paddingMini;
+    font-size: $fontSizeMini;
+  }
 }
