--- a/sass/bootstrap/_utilities.scss
+++ b/sass/bootstrap/_utilities.scss
@@ -3,63 +3,31 @@
 // --------------------------------------------------
 
 
-// // Quick floats
-// .pull-right {
-//   float: right;
-// }
-// .pull-left {
-//   float: left;
-// }
-
-// // Toggling content
-// .hide {
-//   display: none;
-// }
-// .show {
-//   display: block;
-// }
-
-// // Visibility
-// .invisible {
-//   visibility: hidden;
-// }
-
-// // For Affix plugin
-// .affix {
-//   position: fixed;
-// }
-
-
-
-/* @group utilities */
-
+// Quick floats
 .pull-right {
   float: right;
 }
 .pull-left {
   float: left;
 }
+
+// Toggling content
 .hide {
   display: none;
 }
 .show {
   display: block;
 }
+
+// Visibility
 .invisible {
   visibility: hidden;
 }
+
+// For Affix plugin
 .affix {
   position: fixed;
 }
-
-/* @end */
-
-
-
-
-
-
-
 
 // Clearing floats
 .clearfix {
