--- a/sass/bootstrap/_wells.scss
+++ b/sass/bootstrap/_wells.scss
@@ -3,50 +3,28 @@
 // --------------------------------------------------
 
 
+
 // Base class
 .well {
-  margin-bottom: 20px;
-  padding: 19px;
   min-height: 20px;
-  border: 1px solid #e3e3e3;
-  border-bottom: 1px solid #fdfdfa;
-  border-radius: 4px;
-  background-color: #e5e2d5;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.30);
+  padding: 19px;
+  margin-bottom: 20px;
+  background-color: $wellBackground;
+  border: 1px solid darken($wellBackground, 7%);
+  @include border-radius($baseBorderRadius);
+  @include box-shadow(inset 0 1px 1px rgba(0,0,0,.15));
+  blockquote {
+    border-color: #ddd;
+    border-color: rgba(0,0,0,.15);
+  }
 }
-.well blockquote {
-  border-color: #ddd;
-  border-color: rgba(0, 0, 0, 0.15);
-}
+
+// Sizes
 .well-large {
   padding: 24px;
-  border-radius: 6px;
+  @include border-radius($borderRadiusLarge);
 }
 .well-small {
   padding: 9px;
-  border-radius: 3px;
+  @include border-radius($borderRadiusSmall);
 }
-
-// .well {
-//   min-height: 20px;
-//   padding: 19px;
-//   margin-bottom: 20px;
-//   background-color: $wellBackground;
-//   border: 1px solid darken($wellBackground, 7%);
-//   @include border-radius($baseBorderRadius);
-//   @include box-shadow(inset 0 1px 1px rgba(0,0,0,.05));
-//   blockquote {
-//     border-color: #ddd;
-//     border-color: rgba(0,0,0,.15);
-//   }
-// }
-
-// // Sizes
-// .well-large {
-//   padding: 24px;
-//   @include border-radius($borderRadiusLarge);
-// }
-// .well-small {
-//   padding: 9px;
-//   @include border-radius($borderRadiusSmall);
-// }
