--- a/sass/app/_styles.scss
+++ b/sass/app/_styles.scss
@@ -101,6 +101,18 @@ dl {
 }
 
 
+
+
+
+.navbar {
+  .badge-success {
+    background-color: $btnSuccessBackground;
+  }
+}
+
+
+
+
 .modal-body {
   ul {
     list-style: none;
