--- a/war/js/views/help.html
+++ b/war/js/views/help.html
@@ -14,7 +14,7 @@
 
 
     <!-- tabs -->
-    <ul class="nav nav-tabs nav-tabs-app">
+    <ul class="nav nav-tabs nav-tabs-app" style="margin-right: 0px;">
       <li class="active">
         <a href="#planboardTab" data-toggle="tab"><span class="entypo">&#128340;</span> {{ui.planboard.planboard}}</a>
       </li>
