--- a/war/js/views/messages.html
+++ b/war/js/views/messages.html
@@ -10,8 +10,9 @@
 <!-- inboxes -->
 <div class="row-fluid">
   <div class="tabbable tabs-left">
+
     <!-- tabs -->
-    <ul class="nav nav-tabs nav-tabs-app">
+    <ul class="nav nav-tabs nav-tabs-app" style="margin-right: 0px;">
       <li class="{{(views.compose==true) && 'active'}}" ng-show="views.compose">
         <a href="#composeTab" 
             data-toggle="tab"
