--- a/war/js/views/profile.html
+++ b/war/js/views/profile.html
@@ -9,7 +9,7 @@
   <div class="tabbable tabs-left">
     
     <!-- tabs -->
-    <ul class="nav nav-tabs nav-tabs-app">
+    <ul class="nav nav-tabs nav-tabs-app" style="margin-right: 0px;">
       <li class="{{(views.profile==true) && 'active'}}">
         <a href="#profileTab" 
             data-toggle="tab"
