--- a/sass/bootstrap/_navs.scss
+++ b/sass/bootstrap/_navs.scss
@@ -19,7 +19,7 @@
 .nav > li > a:hover,
 .nav > li > a:focus {
   text-decoration: none;
-  background-color: $grayLighter;
+  background-color: darken($bodyBackground, 5%);// $grayLighter;
 }
 
 // Prevent IE8 from misplacing imgs
@@ -134,7 +134,7 @@
 .nav-tabs > .active > a:hover,
 .nav-tabs > .active > a:focus {
   color: $gray;
-  background-color: $bodyBackground;
+  background-color: $white;
   border: 1px solid #ddd;
   border-bottom-color: transparent;
   cursor: default;
@@ -289,6 +289,9 @@
   @include clearfix();
 }
 .tab-content {
+  background-color: $white;
+  padding: 20px;
+  border: 1px solid #ddd;
   overflow: auto; // prevent content from running below tabs
 }
 
@@ -362,6 +365,7 @@
 .tabs-left > .nav-tabs > li > a:hover,
 .tabs-left > .nav-tabs > li > a:focus {
   border-color: $grayLighter #ddd $grayLighter $grayLighter;
+  padding-right: -10px;
 }
 .tabs-left > .nav-tabs .active > a,
 .tabs-left > .nav-tabs .active > a:hover,
