--- a/war/css/app.css
+++ b/war/css/app.css
@@ -130,6 +130,10 @@ dl dd {
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.3);
 }
 
+.navbar .badge-success {
+  background-color: #6f9a6d;
+}
+
 .modal-body ul {
   list-style: none;
   margin: 0;
@@ -823,7 +827,7 @@ label {
 #footer #copyrights span.muted {
   position: absolute;
   top: 5px;
-  right: 205px;
+  right: 255px;
   float: right;
   width: 200px;
 }
@@ -838,7 +842,7 @@ label {
   float: right;
   /* padding-top: 10px; */
   /* padding-bottom: 8px; */
-  width: 190px;
+  width: 240px;
 }
 #download-footer button span.entypo {
   margin-right: 5px;
@@ -970,14 +974,6 @@ ul.nav-tabs-app li span.entypo {
   padding: 20px;
   border: 1px solid #ddd;
   background-color: white;
-}
-
-.table thead th a {
-  color: #fff;
-}
-.table thead th a:hover {
-  color: #fff;
-  text-decoration: underline;
 }
 
 #timeline-controls {
