--- a/war/css/bootstrap.css
+++ b/war/css/bootstrap.css
@@ -1865,6 +1865,12 @@ table {
 .table thead th {
   vertical-align: bottom;
 }
+.table thead th a {
+  color: #7772b5;
+}
+.table thead th a:hover {
+  color: #504b8f;
+}
 .table caption + thead tr:first-child th,
 .table caption + thead tr:first-child td,
 .table colgroup + thead tr:first-child th,
@@ -2992,13 +2998,12 @@ button.close {
   *display: inline;
   /* IE7 inline-block hack */
   *zoom: 1;
-  padding: 5px 12px 5px;
+  padding: 4px 12px;
   margin-bottom: 0;
-  font-size: 12px;
-  font-weight: lighter;
-  line-height: 18px;
+  font-size: 14px;
+  line-height: 20px;
   text-align: center;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.95);
   vertical-align: middle;
   cursor: pointer;
   color: #333333;
@@ -3675,7 +3680,7 @@ input[type="submit"].btn.btn-mini {
 .nav > li > a:hover,
 .nav > li > a:focus {
   text-decoration: none;
-  background-color: #eeeeee;
+  background-color: #eceade;
 }
 
 .nav > li > a > img {
@@ -3795,7 +3800,7 @@ input[type="submit"].btn.btn-mini {
 .nav-tabs > .active > a:hover,
 .nav-tabs > .active > a:focus {
   color: #555555;
-  background-color: #f5f4ee;
+  background-color: white;
   border: 1px solid #ddd;
   border-bottom-color: transparent;
   cursor: default;
@@ -3950,6 +3955,9 @@ input[type="submit"].btn.btn-mini {
 }
 
 .tab-content {
+  background-color: white;
+  padding: 20px;
+  border: 1px solid #ddd;
   overflow: auto;
 }
 
@@ -4022,6 +4030,7 @@ input[type="submit"].btn.btn-mini {
 .tabs-left > .nav-tabs > li > a:hover,
 .tabs-left > .nav-tabs > li > a:focus {
   border-color: #eeeeee #dddddd #eeeeee #eeeeee;
+  padding-right: -10px;
 }
 
 .tabs-left > .nav-tabs .active > a,
@@ -4501,7 +4510,7 @@ input[type="submit"].btn.btn-mini {
 .navbar-inverse .nav .active > a:hover,
 .navbar-inverse .nav .active > a:focus {
   color: white;
-  background-color: #433c2d;
+  background-color: #2d281d;
 }
 .navbar-inverse .navbar-link {
   color: white;
@@ -4516,7 +4525,7 @@ input[type="submit"].btn.btn-mini {
 .navbar-inverse .nav li.dropdown.open > .dropdown-toggle,
 .navbar-inverse .nav li.dropdown.active > .dropdown-toggle,
 .navbar-inverse .nav li.dropdown.open.active > .dropdown-toggle {
-  background-color: #433c2d;
+  background-color: #2d281d;
   color: white;
 }
 .navbar-inverse .nav li.dropdown > a:hover .caret,
@@ -5469,7 +5478,7 @@ a.label:hover, a.label:focus, a.badge:hover, a.badge:focus {
 }
 
 .progress-striped .bar {
-  background-color: #149bdf;
+  background-color: #827fab;
   background-image: -webkit-gradient(linear, 0 100%, 100% 0, color-stop(0.25, rgba(255, 255, 255, 0.15)), color-stop(0.25, transparent), color-stop(0.5, transparent), color-stop(0.5, rgba(255, 255, 255, 0.15)), color-stop(0.75, rgba(255, 255, 255, 0.15)), color-stop(0.75, transparent), to(transparent));
   background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
   background-image: -moz-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
@@ -5490,18 +5499,18 @@ a.label:hover, a.label:focus, a.badge:hover, a.badge:focus {
 }
 
 .progress-danger .bar, .progress .bar-danger {
-  background-color: #dd514b;
-  background-image: -moz-linear-gradient(top, #ee5f5b, #c43c35);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ee5f5b), to(#c43c35));
-  background-image: -webkit-linear-gradient(top, #ee5f5b, #c43c35);
-  background-image: -o-linear-gradient(top, #ee5f5b, #c43c35);
-  background-image: linear-gradient(to bottom, #ee5f5b, #c43c35);
+  background-color: #b44845;
+  background-image: -moz-linear-gradient(top, #ba5855, #ab312f);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ba5855), to(#ab312f));
+  background-image: -webkit-linear-gradient(top, #ba5855, #ab312f);
+  background-image: -o-linear-gradient(top, #ba5855, #ab312f);
+  background-image: linear-gradient(to bottom, #ba5855, #ab312f);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FFEE5F5B', endColorstr='#FFC43C35', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FFBA5855', endColorstr='#FFAB312F', GradientType=0);
 }
 
 .progress-danger.progress-striped .bar, .progress-striped .bar-danger {
-  background-color: #ee5f5b;
+  background-color: #ba5855;
   background-image: -webkit-gradient(linear, 0 100%, 100% 0, color-stop(0.25, rgba(255, 255, 255, 0.15)), color-stop(0.25, transparent), color-stop(0.5, transparent), color-stop(0.5, rgba(255, 255, 255, 0.15)), color-stop(0.75, rgba(255, 255, 255, 0.15)), color-stop(0.75, transparent), to(transparent));
   background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
   background-image: -moz-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
@@ -5510,18 +5519,18 @@ a.label:hover, a.label:focus, a.badge:hover, a.badge:focus {
 }
 
 .progress-success .bar, .progress .bar-success {
-  background-color: #5db95d;
-  background-image: -moz-linear-gradient(top, #62c462, #57a957);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#62c462), to(#57a957));
-  background-image: -webkit-linear-gradient(top, #62c462, #57a957);
-  background-image: -o-linear-gradient(top, #62c462, #57a957);
-  background-image: linear-gradient(to bottom, #62c462, #57a957);
+  background-color: #619060;
+  background-image: -moz-linear-gradient(top, #6f9a6d, #4d834d);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#6f9a6d), to(#4d834d));
+  background-image: -webkit-linear-gradient(top, #6f9a6d, #4d834d);
+  background-image: -o-linear-gradient(top, #6f9a6d, #4d834d);
+  background-image: linear-gradient(to bottom, #6f9a6d, #4d834d);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FF62C462', endColorstr='#FF57A957', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FF6F9A6D', endColorstr='#FF4D834D', GradientType=0);
 }
 
 .progress-success.progress-striped .bar, .progress-striped .bar-success {
-  background-color: #62c462;
+  background-color: #6f9a6d;
   background-image: -webkit-gradient(linear, 0 100%, 100% 0, color-stop(0.25, rgba(255, 255, 255, 0.15)), color-stop(0.25, transparent), color-stop(0.5, transparent), color-stop(0.5, rgba(255, 255, 255, 0.15)), color-stop(0.75, rgba(255, 255, 255, 0.15)), color-stop(0.75, transparent), to(transparent));
   background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
   background-image: -moz-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
@@ -5550,18 +5559,18 @@ a.label:hover, a.label:focus, a.badge:hover, a.badge:focus {
 }
 
 .progress-warning .bar, .progress .bar-warning {
-  background-color: #eab257;
-  background-image: -moz-linear-gradient(top, #eebf73, #e6a02f);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#eebf73), to(#e6a02f));
-  background-image: -webkit-linear-gradient(top, #eebf73, #e6a02f);
-  background-image: -o-linear-gradient(top, #eebf73, #e6a02f);
-  background-image: linear-gradient(to bottom, #eebf73, #e6a02f);
+  background-color: #e4971c;
+  background-image: -moz-linear-gradient(top, #e6a02f, #e28b00);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#e6a02f), to(#e28b00));
+  background-image: -webkit-linear-gradient(top, #e6a02f, #e28b00);
+  background-image: -o-linear-gradient(top, #e6a02f, #e28b00);
+  background-image: linear-gradient(to bottom, #e6a02f, #e28b00);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FFEEBF73', endColorstr='#FFE6A02F', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FFE6A02F', endColorstr='#FFE28B00', GradientType=0);
 }
 
 .progress-warning.progress-striped .bar, .progress-striped .bar-warning {
-  background-color: #eebf73;
+  background-color: #e6a02f;
   background-image: -webkit-gradient(linear, 0 100%, 100% 0, color-stop(0.25, rgba(255, 255, 255, 0.15)), color-stop(0.25, transparent), color-stop(0.5, transparent), color-stop(0.5, rgba(255, 255, 255, 0.15)), color-stop(0.75, rgba(255, 255, 255, 0.15)), color-stop(0.75, transparent), to(transparent));
   background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
   background-image: -moz-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
