--- a/war/js/views/planboard.html
+++ b/war/js/views/planboard.html
@@ -315,8 +315,7 @@
     <div class="tabbable tabs-left">
       
       <!-- tabs -->
-      <ul class="nav nav-tabs nav-tabs-app"
-          style="width: 100px; margin-right: -1px;">
+      <ul class="nav nav-tabs nav-tabs-app" style="margin-right: 0px;">
         <li class="active">
           <a  href="#timelineTab" 
               data-toggle="tab"
