--- a/war/js/views/settings.html
+++ b/war/js/views/settings.html
@@ -8,7 +8,7 @@
   <div class="tabbable tabs-left">
     
     <!-- tabs -->
-    <ul class="nav nav-tabs nav-tabs-app">
+    <ul class="nav nav-tabs nav-tabs-app" style="margin-right: 0px;">
 
       <li class="active">
         <a href="#userSettingsTab" 
